create new files

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <script src="./sample1.js"></script>
     <h1>hai i m second page</h1>
+    <button id="clicks" onclick="getMessage()"></button>
 </body>
 </html>
